--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,30 +1,96 @@
-apply plugin: 'com.android.application'
+rootProject.appPlugins.each {
+    apply plugin: it
+}
+
+apply from: "${rootProject.getRootDir()}/tools/git/script-git-version.gradle"
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+
     defaultConfig {
+
         applicationId "com.orogersilva.superpub.dublin"
-        minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+    signingConfigs {
+
+        debug {
+
+            storeFile rootProject.file('keystore/debug.jks')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
         }
+
+        release {
+
+            storeFile rootProject.file('keystore/release.jks')
+            storePassword System.getenv("STORE_PASSWORD")
+            keyAlias System.getenv("KEY_ALIAS")
+            keyPassword System.getenv("KEY_PASSWORD")
+        }
+    }
+
+    productFlavors {
+
+        dev {
+
+            versionCode gitVersionCodeTime
+            versionName gitVersionName
+
+            applicationIdSuffix ".dev"
+        }
+
+        prod {
+
+            versionCode gitVersionCode
+            versionName gitVersionName
+        }
+    }
+
+    buildTypes {
+
+        debug {
+
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                    rootProject.file('tools/proguard/rules-proguard-debug.pro')
+
+            signingConfig signingConfigs.debug
+        }
+
+        release {
+
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                    rootProject.file('tools/proguard/rules-proguard.pro')
+
+            signingConfig signingConfigs.release
+        }
+    }
+
+    lintOptions {
+
+        checkReleaseBuilds false
+    }
+}
+
+// Show test status in console.
+tasks.withType(Test) {
+
+    testLogging {
+        events "passed", "failed"
     }
 }
 
 dependencies {
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support.constraint:constraint-layout:1.0.1'
+
+    rootProject.appDependencies.each {
+        add(it.configuration, it.dependency, it.options)
+    }
 }
+
+apply from: "${rootProject.getRootDir()}/android.gradle"
