--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    apply from: 'dependencies.gradle'
+
     repositories {
         jcenter()
+        mavenCentral()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.4.0-alpha3'
+
+        classpath androidBuildTools
+        classpath kotlinGradlePlugin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -13,8 +20,10 @@ buildscript {
 }
 
 allprojects {
+
     repositories {
         jcenter()
+        mavenCentral()
     }
 }
 
