--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 
         classpath androidBuildTools
         classpath kotlinGradlePlugin
+        classpath realmPlugin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
