--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,16 +3,18 @@ ext {
     // VERSIONS
 
     // Libs
-    androidGradleBuildToolsVersion = '2.3.0'
+    androidGradleBuildToolsVersion = '2.3.1'
     androidSDKVersion = '25.3.1'
 
     constraintLayoutVersion = '1.0.1'
     espressoVersion = '2.2.2'
+    gsonVersion = '2.8.0'
     junitVersion = '4.12'
-    kotlinVersion = '1.0.6'
+    kotlinVersion = '1.0.7'
     realmVersion = '3.0.0'
     retrofitVersion = '2.2.0'
     rxjava2Version = '2.0.8'
+    stethoVersion = '1.4.2'
 
     // CLASSPATH's
 
@@ -28,9 +30,11 @@ ext {
     ]
 
     def libs = [
+            gson: [group: 'com.google.code.gson', name: 'gson', version: gsonVersion],
             kotlin: [group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlinVersion],
             retrofit: [group: 'com.squareup.retrofit2', name: 'retrofit', version: retrofitVersion],
-            rxjava2: [group: 'io.reactivex.rxjava2', name: 'rxjava', version: rxjava2Version]
+            rxjava2: [group: 'io.reactivex.rxjava2', name: 'rxjava', version: rxjava2Version],
+            stetho: [group: 'com.facebook.stetho', name: 'stetho', version: stethoVersion]
     ]
 
     def testLibs = [
@@ -44,9 +48,11 @@ ext {
             [configuration: 'compile', dependency: androidLibs.appCompat],
             [configuration: 'compile', dependency: androidLibs.constraintLayout],
 
+            [configuration: 'compile', dependency: libs.gson],
             [configuration: 'compile', dependency: libs.kotlin],
             [configuration: 'compile', dependency: libs.retrofit],
             [configuration: 'compile', dependency: libs.rxjava2],
+            [configuration: 'compile', dependency: libs.stetho],
 
             [configuration: 'androidTestCompile', dependency: testLibs.espresso,
              options: { exclude group: 'com.android.support', module: 'support-annotations' }],
