--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ ext {
     androidGradleBuildToolsVersion = '2.3.1'
     androidSDKVersion = '25.3.1'
 
-    constraintLayoutVersion = '1.0.1'
+    constraintLayoutVersion = '1.0.2'
     daggerVersion = '2.9'
     espressoVersion = '2.2.2'
     gsonVersion = '2.8.0'
@@ -16,6 +16,7 @@ ext {
     leakCanaryVersion = '1.5'
     realmVersion = '3.0.0'
     retrofitVersion = '2.2.0'
+    rippleEffectVersion = '1.3'
     rxjava2Version = '2.0.8'
     stethoVersion = '1.4.2'
 
@@ -40,6 +41,7 @@ ext {
             kotlin: [group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlinVersion],
             leakCanary: [group: 'com.squareup.leakcanary', name: 'leakcanary-android', version: leakCanaryVersion],
             retrofit: [group: 'com.squareup.retrofit2', name: 'retrofit', version: retrofitVersion],
+            rippleEffect: [group: 'com.github.traex.rippleeffect', name: 'library', version: rippleEffectVersion],
             rxjava2: [group: 'io.reactivex.rxjava2', name: 'rxjava', version: rxjava2Version],
             stetho: [group: 'com.facebook.stetho', name: 'stetho', version: stethoVersion]
     ]
@@ -62,6 +64,7 @@ ext {
             [configuration: 'compile', dependency: libs.kotlin],
             [configuration: 'debugCompile', dependency: libs.leakCanary],
             [configuration: 'compile', dependency: libs.retrofit],
+            [configuration: 'compile', dependency: libs.rippleEffect],
             [configuration: 'compile', dependency: libs.rxjava2],
             [configuration: 'compile', dependency: libs.stetho],
 
@@ -75,6 +78,7 @@ ext {
     appPlugins = [
             'com.android.application',
             'kotlin-android',
+            'kotlin-android-extensions',
             'kotlin-kapt',
             'realm-android'
     ]
