--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,6 +9,7 @@ ext {
     constraintLayoutVersion = '1.0.2'
     daggerVersion = '2.9'
     espressoVersion = '2.2.2'
+    facebookSdkVersion = '4.21.1'
     gsonVersion = '2.8.0'
     javaxAnnotationVersion = '1.0'
     junitVersion = '4.12'
@@ -16,7 +17,7 @@ ext {
     leakCanaryVersion = '1.5'
     realmVersion = '3.0.0'
     retrofitVersion = '2.2.0'
-    rippleEffectVersion = '1.3'
+    rippleEffectVersion = '1.3.1'
     rxjava2Version = '2.0.8'
     stethoVersion = '1.4.2'
 
@@ -36,12 +37,13 @@ ext {
     def libs = [
             dagger: [group: 'com.google.dagger', name: 'dagger', version: daggerVersion],
             daggerCompiler: [group: 'com.google.dagger', name: 'dagger-compiler', version: daggerVersion],
+            facebookSdk: [group: 'com.facebook.android', name: 'facebook-android-sdk', version: facebookSdkVersion],
             gson: [group: 'com.google.code.gson', name: 'gson', version: gsonVersion],
             javaxAnnotation: [group: 'javax.annotation', name: 'jsr250-api', version: javaxAnnotationVersion],
             kotlin: [group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlinVersion],
             leakCanary: [group: 'com.squareup.leakcanary', name: 'leakcanary-android', version: leakCanaryVersion],
             retrofit: [group: 'com.squareup.retrofit2', name: 'retrofit', version: retrofitVersion],
-            rippleEffect: [group: 'com.github.traex.rippleeffect', name: 'library', version: rippleEffectVersion],
+            rippleEffect: [group: 'com.patrickpissurno', name: 'ripple-effect', version: rippleEffectVersion],
             rxjava2: [group: 'io.reactivex.rxjava2', name: 'rxjava', version: rxjava2Version],
             stetho: [group: 'com.facebook.stetho', name: 'stetho', version: stethoVersion]
     ]
@@ -59,10 +61,11 @@ ext {
 
             [configuration: 'compile', dependency: libs.dagger],
             [configuration: 'kapt', dependency: libs.daggerCompiler],
+            [configuration: 'compile', dependency: libs.facebookSdk],
             [configuration: 'compile', dependency: libs.gson],
             [configuration: 'provided', dependency: libs.javaxAnnotation],
             [configuration: 'compile', dependency: libs.kotlin],
-            [configuration: 'debugCompile', dependency: libs.leakCanary],
+            [configuration: 'compile', dependency: libs.leakCanary],
             [configuration: 'compile', dependency: libs.retrofit],
             [configuration: 'compile', dependency: libs.rippleEffect],
             [configuration: 'compile', dependency: libs.rxjava2],
