--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,6 +7,7 @@ ext {
     androidSDKVersion = '25.3.1'
 
     constraintLayoutVersion = '1.0.2'
+    daggerMockVersion = '0.6.4'
     daggerVersion = '2.9'
     espressoVersion = '2.2.2'
     facebookSdkVersion = '4.21.1'
@@ -15,6 +16,7 @@ ext {
     junitVersion = '4.12'
     kotlinVersion = '1.0.7'
     leakCanaryVersion = '1.5'
+    mockitoKotlinVersion = '1.4.0'
     realmVersion = '3.0.0'
     retrofitVersion = '2.2.0'
     rippleEffectVersion = '1.3.1'
@@ -49,8 +51,10 @@ ext {
     ]
 
     def testLibs = [
+            daggerMock: [group: 'com.github.fabioCollini', name: 'DaggerMock', version: daggerMockVersion],
             espresso: [group: 'com.android.support.test.espresso', name: 'espresso-core', version: espressoVersion],
-            junit: [group: 'junit', name: 'junit', version: junitVersion]
+            junit: [group: 'junit', name: 'junit', version: junitVersion],
+            mockitoKotlin: [group: 'com.nhaarman', name: 'mockito-kotlin', version: mockitoKotlinVersion]
     ]
 
     // MODULES DEPENDENCIES
@@ -71,9 +75,11 @@ ext {
             [configuration: 'compile', dependency: libs.rxjava2],
             [configuration: 'compile', dependency: libs.stetho],
 
+            [configuration: 'testCompile', dependency: testLibs.daggerMock],
             [configuration: 'androidTestCompile', dependency: testLibs.espresso,
              options: { exclude group: 'com.android.support', module: 'support-annotations' }],
-            [configuration: 'testCompile', dependency: testLibs.junit]
+            [configuration: 'testCompile', dependency: testLibs.junit],
+            [configuration: 'testCompile', dependency: testLibs.mockitoKotlin]
     ]
 
     // PLUGINS
