--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,6 +6,7 @@ ext {
     androidGradleBuildToolsVersion = '2.3.1'
     androidSDKVersion = '25.3.1'
 
+    avLoadingIndicatorViewVersion = '2.1.3'
     constraintLayoutVersion = '1.0.2'
     daggerMockVersion = '-SNAPSHOT'
     daggerVersion = '2.9'
@@ -18,6 +19,7 @@ ext {
     leakCanaryVersion = '1.5'
     mockitoKotlinVersion = '1.4.0'
     realmVersion = '3.0.0'
+    recyclerviewVersion = '21.0.+'
     retrofitVersion = '2.2.0'
     rippleEffectVersion = '1.3.1'
     rxjava2Version = '2.0.8'
@@ -33,10 +35,12 @@ ext {
 
     def androidLibs = [
             appCompat: [group: 'com.android.support', name: 'appcompat-v7', version: androidSDKVersion],
-            constraintLayout: [group: 'com.android.support.constraint', name: 'constraint-layout', version: constraintLayoutVersion]
+            constraintLayout: [group: 'com.android.support.constraint', name: 'constraint-layout', version: constraintLayoutVersion],
+            recyclerview: [group: 'com.android.support', name: 'recyclerview-v7', version: recyclerviewVersion]
     ]
 
     def libs = [
+            avLoadingIndicatorView: [group: 'com.wang.avi', name: 'library', version: avLoadingIndicatorViewVersion],
             dagger: [group: 'com.google.dagger', name: 'dagger', version: daggerVersion],
             daggerCompiler: [group: 'com.google.dagger', name: 'dagger-compiler', version: daggerVersion],
             facebookSdk: [group: 'com.facebook.android', name: 'facebook-android-sdk', version: facebookSdkVersion],
@@ -62,7 +66,9 @@ ext {
     appDependencies = [
             [configuration: 'compile', dependency: androidLibs.appCompat],
             [configuration: 'compile', dependency: androidLibs.constraintLayout],
+            [configuration: 'compile', dependency: androidLibs.recyclerview],
 
+            [configuration: 'compile', dependency: libs.avLoadingIndicatorView],
             [configuration: 'compile', dependency: libs.dagger],
             [configuration: 'kapt', dependency: libs.daggerCompiler],
             [configuration: 'compile', dependency: libs.facebookSdk],
