Huge commit! (Never again I do this. I promise.)

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     dependencies {
 
         classpath androidBuildTools
+        classpath frodoPlugin
         classpath kotlinGradlePlugin
         classpath realmPlugin
 
