--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,7 +3,7 @@ ext {
     // VERSIONS
 
     // Libs
-    androidGradleBuildToolsVersion = '2.3.1'
+    androidGradleBuildToolsVersion = '2.3.2'
     androidSDKVersion = '25.3.1'
 
     avLoadingIndicatorViewVersion = '2.1.3'
@@ -13,10 +13,11 @@ ext {
     daggerVersion = '2.9'
     espressoVersion = '2.2.2'
     facebookSdkVersion = '4.21.1'
+    frodoVersion = '0.8.3'
     gsonVersion = '2.8.0'
     javaxAnnotationVersion = '1.0'
     junitVersion = '4.12'
-    kotlinVersion = '1.0.7'
+    kotlinVersion = '1.1.2-3'
     leakCanaryVersion = '1.5'
     mockitoKotlinVersion = '1.4.0'
     mockWebServerVersion = '3.6.0'
@@ -29,6 +30,7 @@ ext {
     // CLASSPATH's
 
     androidBuildTools = "com.android.tools.build:gradle:$androidGradleBuildToolsVersion"
+    frodoPlugin = "com.fernandocejas.frodo:frodo-plugin:$frodoVersion"
     kotlinGradlePlugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     realmPlugin = "io.realm:realm-gradle-plugin:$realmVersion"
 
@@ -91,11 +93,13 @@ ext {
             [configuration: 'compile', dependency: libs.rxjava2],
             [configuration: 'compile', dependency: libs.stetho],
 
+            [configuration: 'kaptTest', dependency: libs.daggerCompiler],
             [configuration: 'testCompile', dependency: testLibs.daggerMock],
             [configuration: 'androidTestCompile', dependency: testLibs.espresso, options:
                     { exclude group: 'com.android.support', module: 'support-annotations' }],
             [configuration: 'testCompile', dependency: testLibs.junit],
-            [configuration: 'testCompile', dependency: testLibs.mockitoKotlin],
+            [configuration: 'testCompile', dependency: testLibs.mockitoKotlin, options:
+                    { exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib' }],
             [configuration: 'testCompile', dependency: testLibs.mockWebServer]
     ]
 
@@ -103,6 +107,7 @@ ext {
 
     appPlugins = [
             'com.android.application',
+            'com.fernandocejas.frodo',
             'kotlin-android',
             'kotlin-android-extensions',
             'kotlin-kapt',
