--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,11 +1,15 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.fernandocejas.frodo'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'realm-android'
 
 android {
 
     defaultConfig {
+
+        defaultPublishConfig 'release'
+        publishNonDefault true
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -14,11 +18,16 @@ android {
 
         release {
 
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            // shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
                     rootProject.file('tools/proguard/rules-proguard.pro')
         }
+    }
+
+    lintOptions {
+
+        abortOnError false
     }
 }
 
@@ -47,6 +56,7 @@ dependencies {
             gson: [group: 'com.google.code.gson', name: 'gson', version: gsonVersion],
             javaxAnnotation: [group: 'javax.annotation', name: 'jsr250-api', version: javaxAnnotationVersion],
             kotlin: [group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlinVersion],
+            kotlinReflect: [group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlinVersion],
             retrofit: [group: 'com.squareup.retrofit2', name: 'retrofit', version: retrofitVersion],
             retrofitRxJava2Adapter: [group: 'com.squareup.retrofit2', name: 'adapter-rxjava2', version: retrofitVersion],
             rxjava2: [group: 'io.reactivex.rxjava2', name: 'rxjava', version: rxjava2Version]
@@ -55,6 +65,7 @@ dependencies {
     def testLibs = [
             espresso: [group: 'com.android.support.test.espresso', name: 'espresso-core', version: espressoVersion],
             junit: [group: 'junit', name: 'junit', version: junitVersion],
+            kotlinUnitTest: [group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: kotlinVersion],
             mockitoKotlin: [group: 'com.nhaarman', name: 'mockito-kotlin', version: mockitoKotlinVersion],
             mockWebServer: [group: 'com.squareup.okhttp3', name: 'mockwebserver', version: mockWebServerVersion]
     ]
@@ -68,6 +79,7 @@ dependencies {
             [configuration: 'compile', dependency: libs.gson],
             [configuration: 'provided', dependency: libs.javaxAnnotation],
             [configuration: 'compile', dependency: libs.kotlin],
+            [configuration: 'compile', dependency: libs.kotlinReflect],
             [configuration: 'compile', dependency: libs.retrofit],
             [configuration: 'compile', dependency: libs.retrofitRxJava2Adapter],
             [configuration: 'compile', dependency: libs.rxjava2],
@@ -75,6 +87,7 @@ dependencies {
             [configuration: 'androidTestCompile', dependency: testLibs.espresso, options:
                     { exclude group: 'com.android.support', module: 'support-annotations' }],
             [configuration: 'testCompile', dependency: testLibs.junit],
+            [configuration: 'testCompile', dependency: testLibs.kotlinUnitTest],
             [configuration: 'testCompile', dependency: testLibs.mockitoKotlin, options:
                     { exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib' }],
             [configuration: 'testCompile', dependency: testLibs.mockWebServer]
