--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,4 +1,8 @@
 apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
+
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 sourceSets {
 
@@ -33,11 +37,13 @@ dependencies {
             javaxAnnotation: [group: 'javax.annotation', name: 'jsr250-api', version: javaxAnnotationVersion],
             gson: [group: 'com.google.code.gson', name: 'gson', version: gsonVersion],
             kotlin: [group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlinVersion],
+            kotlinReflect: [group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlinVersion],
             rxjava2: [group: 'io.reactivex.rxjava2', name: 'rxjava', version: rxjava2Version]
     ]
 
     def testLibs = [
             junit: [group: 'junit', name: 'junit', version: junitVersion],
+            kotlinUnitTest: [group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: kotlinVersion],
             mockitoKotlin: [group: 'com.nhaarman', name: 'mockito-kotlin', version: mockitoKotlinVersion]
     ]
 
@@ -47,9 +53,11 @@ dependencies {
             [configuration: 'compile', dependency: libs.gson],
             [configuration: 'compileOnly', dependency: libs.javaxAnnotation],
             [configuration: 'compile', dependency: libs.kotlin],
+            [configuration: 'compile', dependency: libs.kotlinReflect],
             [configuration: 'compile', dependency: libs.rxjava2],
 
             [configuration: 'testCompile', dependency: testLibs.junit],
+            [configuration: 'testCompile', dependency: testLibs.kotlinUnitTest],
             [configuration: 'testCompile', dependency: testLibs.mockitoKotlin, options:
                     { exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib' }]
     ]
@@ -58,6 +66,3 @@ dependencies {
         add(it.configuration, it.dependency, it.options)
     }
 }
-
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
