--- a/data/build.gradle
+++ b/data/build.gradle
@@ -11,6 +11,8 @@ android {
         defaultPublishConfig 'release'
         publishNonDefault true
 
+        multiDexEnabled true
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
